force-app/main/default/objects/OpcionesOfertaSTD__c/OpcionesOfertaSTD__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>OpcionesOfertaSTD</label>
</CustomObject>