force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Caldera__c.field-meta.xml
<CustomField>
    <fullName>Caldera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caldera</label>
    <type>Checkbox</type>
</CustomField>