force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Contador__c.field-meta.xml
<CustomField>
    <fullName>Contador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contador</label>
    <type>Checkbox</type>
</CustomField>