force-app/main/default/objects/OpcionesOfertaSTD__c/fields/CuotaMensual__c.field-meta.xml
<CustomField>
    <fullName>CuotaMensual__c</fullName>
    <label>CuotaMensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>