force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Deposito__c.field-meta.xml
<CustomField>
    <fullName>Deposito__c</fullName>
    <label>Depósito</label>
    <length>50</length>
    <type>Text</type>
</CustomField>