force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Desde__c.field-meta.xml
<CustomField>
    <fullName>Desde__c</fullName>
    <label>Desde</label>
    <length>50</length>
    <type>Text</type>
</CustomField>