force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Dto_E_Kg__c.field-meta.xml
<CustomField>
    <fullName>Dto_E_Kg__c</fullName>
    <label>Dto €/Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>