force-app/main/default/objects/OpcionesOfertaSTD__c/fields/DuracionDto__c.field-meta.xml
<CustomField>
    <fullName>DuracionDto__c</fullName>
    <label>DuracionDto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>