force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Imp_equipos__c.field-meta.xml
<CustomField>
    <fullName>Imp_equipos__c</fullName>
    <description>Importe equipos</description>
    <label>Importe equipos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>