force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Imp_inst_ext__c.field-meta.xml
<CustomField>
    <fullName>Imp_inst_ext__c</fullName>
    <description>Importe Instalación exterior</description>
    <label>Importe Instalación exterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>