force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Imp_inst_int__c.field-meta.xml
<CustomField>
    <fullName>Imp_inst_int__c</fullName>
    <description>Importe Instalación interior</description>
    <label>Importe Instalación interior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>