force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Imp_obra_civil__c.field-meta.xml
<CustomField>
    <fullName>Imp_obra_civil__c</fullName>
    <description>Importe obra civil</description>
    <label>Importe obra civil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>