force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Imp_proyectos__c.field-meta.xml
<CustomField>
    <fullName>Imp_proyectos__c</fullName>
    <description>Importe proyectos</description>
    <label>Importe proyectos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>