force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Inspeccion_interiores_obligatoria_DOM__c.field-meta.xml
<CustomField>
    <fullName>Inspeccion_interiores_obligatoria_DOM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspección interiores obligatoria DOM</label>
    <type>Checkbox</type>
</CustomField>