force-app/main/default/objects/OpcionesOfertaSTD__c/fields/InversionSinDeposito__c.field-meta.xml
<CustomField>
    <fullName>InversionSinDeposito__c</fullName>
    <label>InversionSinDeposito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>