force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Mantenimiento_bianual__c.field-meta.xml
<CustomField>
    <fullName>Mantenimiento_bianual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mantenimiento bianual</label>
    <type>Checkbox</type>
</CustomField>