force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Mantenimiento_estandar__c.field-meta.xml
<CustomField>
    <fullName>Mantenimiento_estandar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mantenimiento estándar</label>
    <type>Checkbox</type>
</CustomField>