force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Nivel_a_distancia__c.field-meta.xml
<CustomField>
    <fullName>Nivel_a_distancia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nivel a distancia</label>
    <type>Checkbox</type>
</CustomField>