force-app/main/default/objects/OpcionesOfertaSTD__c/fields/OpcExterior__c.field-meta.xml
<CustomField>
    <fullName>OpcExterior__c</fullName>
    <label>OpcExterior</label>
    <length>50</length>
    <type>Text</type>
</CustomField>