force-app/main/default/objects/OpcionesOfertaSTD__c/fields/OpcInterior__c.field-meta.xml
<CustomField>
    <fullName>OpcInterior__c</fullName>
    <label>OpcInterior</label>
    <length>50</length>
    <type>Text</type>
</CustomField>