force-app/main/default/objects/OpcionesOfertaSTD__c/fields/OpcServicio__c.field-meta.xml
<CustomField>
    <fullName>OpcServicio__c</fullName>
    <label>OpcServicio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>