force-app/main/default/objects/OpcionesOfertaSTD__c/fields/PagoInicial__c.field-meta.xml
<CustomField>
    <fullName>PagoInicial__c</fullName>
    <label>PagoInicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>