force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Quemador__c.field-meta.xml
<CustomField>
    <fullName>Quemador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quemador</label>
    <type>Checkbox</type>
</CustomField>