force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Resolucion_anticipada__c.field-meta.xml
<CustomField>
    <fullName>Resolucion_anticipada__c</fullName>
    <description>Resolución anticipada</description>
    <label>Resolución anticipada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>