force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tarifa__c</fullName>
    <label>Tarifa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>