force-app/main/default/objects/OpcionesOfertaSTD__c/fields/Telemedida__c.field-meta.xml
<CustomField>
    <fullName>Telemedida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telemedida</label>
    <type>Checkbox</type>
</CustomField>