force-app/main/default/objects/OpcionesOfertaSTD__c/listViews/AGRI.listView-meta.xml
<ListView>
    <fullName>AGRI</fullName>
    <columns>NAME</columns>
    <columns>Oferta__c</columns>
    <columns>Activo__c</columns>
    <columns>Desde__c</columns>
    <columns>CuotaMensual__c</columns>
    <columns>Tarifa__c</columns>
    <columns>Dto_E_Kg__c</columns>
    <columns>DuracionDto__c</columns>
    <columns>Deposito__c</columns>
    <columns>InversionSinDeposito__c</columns>
    <columns>PagoInicial__c</columns>
    <columns>OpcExterior__c</columns>
    <columns>OpcInterior__c</columns>
    <columns>OpcServicio__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tarifa__c</field>
        <operation>contains</operation>
        <value>BOE</value>
    </filters>
    <label>AGRI</label>
    <language>es</language>
</ListView>